ie text-align fix

--- a/src/scss/_column.scss
+++ b/src/scss/_column.scss
@@ -53,6 +53,10 @@
     .start-#{$name} {
       justify-content: flex-start;
       text-align: start;
+
+      @include ie-only {
+        text-align: left;
+      }
     }
 
     .center-#{$name} {
@@ -63,6 +67,10 @@
     .end-#{$name} {
       justify-content: flex-end;
       text-align: end;
+
+      @include ie-only {
+        text-align: right;
+      }
     }
 
     .around-#{$name} {
